# my-ostis-app

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.yml  mkdocs.yml  ostis-example-app.ini  repo.path  Отчет.docx
.run/: sc-machine.run.xml
docs/: index.md
knowledge-base/: subject_domain_of_company_staff.scs
problem-solver/cxx/example-module/: CMakeLists.txt  exampleModule.cpp  exampleModule.hpp
problem-solver/cxx/example-module/agents/: ExampleInferenceAgent.cpp  ExampleInferenceAgent.hpp  IsomorphicSearchAgent.cpp  IsomorphicSearchAgent.hpp  PathSearchAgent.cpp  PathSearchAgent.hpp  SubdividingSearchAgent.cpp  SubdividingSearchAgent.hpp
problem-solver/cxx/example-module/data-structures/: ConnectorInfo.hpp  ConnectorTemplateInfo.hpp  PathInfo.hpp  WeightTemplateInfo.hpp
problem-solver/cxx/example-module/keynodes/: Keynodes.hpp
problem-solver/cxx/example-module/searcher/: PathSearcher.cpp  PathSearcher.hpp
problem-solver/cxx/example-module/specifications/agent_of_isomorphic_search/: ui_menu_isomorphic_search.scs
problem-solver/cxx/example-module/specifications/agent_of_subdividing_search/: ui_menu_subdividing_search.scs
problem-solver/cxx/example-module/test/: CMakeLists.txt
problem-solver/cxx/example-module/test/test-structures/: checkTemplates.scs  graphWithThreeStepsShortestPath.scs  graphWithTwoStepsShortestPath.scs  number.scs  templates.scs  testAction.scs
problem-solver/cxx/example-module/test/units/: testNumberUtils.cpp  testPathSearchAgent.cpp
problem-solver/cxx/example-module/test/utils/: TestUtils.cpp  TestUtils.hpp
problem-solver/cxx/example-module/utils/: NumberUtils.cpp  NumberUtils.hpp  TemplateUtils.cpp  TemplateUtils.hpp
scripts/: start.sh  (+1 more)
(+62 files in other folders)
